# mast3r_pixi

./: CHANGES.md  README.md  pyproject.toml  setup.py
dust3r/croco/models/curope/: pyproject.toml
mast3r/: catmlp_dpt_head.py  fast_nn.py  losses.py  model.py
mast3r/croco/models/: croco.py
mast3r/datasets/: __init__.py
mast3r/datasets/base/: mast3r_base_stereo_view_dataset.py
mast3r/datasets/utils/: cropping.py
mast3r/dust3r/: losses.py  model.py
mast3r/dust3r/heads/: dpt_head.py
mast3r/dust3r/utils/: path_to_croco.py
