[project]
version = "0.0.1"
authors = [{name = "Johannes Künzel", email = "johannes.kuenzel@hhi.fraunhofer.de"}]
name = "mast3r"
requires-python = ">= 3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mast3r", "mast3r.*", "dust3r.dust3r", "dust3r.dust3r.*", "dust3r.croco.*"]
namespaces = false

[tool.pixi.project]
channels = ["nvidia/label/cuda-12.6.0", "https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.6"

[tool.pixi.dependencies]
cuda = {version = "*", channel="nvidia/label/cuda-12.6.0"}
pytorch-gpu = "*"
torchvision = "*"
cmake = ">=3.0.0,<4"
eigen = ">=3.4.0,<4"

[tool.pixi.pypi-dependencies]
mast3r = { path = ".", editable = true }